objects/vlocity_cmt__VlocityIntegrationSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__APIName__c</fullName>
        <description>API name or module name for which settings are configured</description>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__APIType__c</fullName>
        <label>Type Of API</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CommerceCloud</fullName>
                </value>
                <value>
                    <fullName>Matrixx</fullName>
                </value>
                <value>
                    <fullName>TMForum</fullName>
                </value>
                <value>
                    <fullName>FlowOne</fullName>
                </value>
                <value>
                    <fullName>AdSales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultValue__c</fullName>
        <description>The default value of setting</description>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <description>Description for the setting</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable and disable the settings</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Key__c</fullName>
        <description>Setting name</description>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Value__c</fullName>
        <description>It will be deprecated as this feild was not SubscriberControlled when Managed Org was created.</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Integration Setting</label>
    <pluralLabel>Vlocity Integration Settings</pluralLabel>
</CustomObject>